Make tooltip work on mobile/safari, fix VSF logo, add fun comment in source code

--- a/src/assets/styles/03-componenets/_hero.scss
+++ b/src/assets/styles/03-componenets/_hero.scss
@@ -29,7 +29,8 @@
       }
 
       &:hover,
-      &.hover {
+      &.hover,
+      &:focus {
         .tooltip-content {
           visibility: visible;
           opacity: 1;
